<resources>
    <string name="app_name">Translate</string>
    <string name="translate">翻译</string>
    <string name="Recent">历史</string>
    <string name="language" translatable="false">请选择语言：</string>
    <string name="title_activity_splay" translatable="false">SplayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="recent">翻译历史</string>
    <string name="xieyi" translatable="false">请你务必审慎阅读、充分理解"服务协议"和"隐私协议"各条款，
        包括但不限于：为了向你提供翻译服务，我们需要收集你的设备信息、操作日志等个人信息。你可以在"设置"中查看、变更、删除个人信息并管理你的授权。
    你可阅读《隐私政策》与《用户协议》了解详细信息。如你同意，请点击"同意"开始接受我们的服务</string>
    <string name="ystop">为了保护您的个人隐私和数据安全，请您在使用计算器(以下简称”本产品”)与服务前，阅读本隐私政策，了解我们收集、使用、存储您的信息时的具体方法， 在确认充分理解并同意后再使用我们的产品和服务。使用或访问我们的应用程序或服务，即表示您同意我们按照本隐私政策收集、使用、存储您的信息。 同时我们也会负责任地管理、使用和保护您的个人信息，我们将按照法律法规的规定，保护您的个人信息以及隐私安全。</string>
    <string name="yizc">隐私政策</string>
    <string name="ys1">为向您提供本产品的功能服务，我们将按照本隐私政策所述收集和使用您的个人设备信息。为确保您个人设备信息的安全，我们采取合规技术对您明确同意和主动提供的敏感信息进行加密存储和加强管制力度。我们没有通过共享、转让等其他渠道间接获取您的个人信息。如将来需通过其他渠道间接获取您的个人信息，我们只获取实现本产品/服务功能所必需的最少数量的信息，且在收集和使用之前明确告知您并征求您的明示同意。我们对于您个人信息处理不会超出相关授权范围，如需超出授权范围处理，我们将另行征得您的明示同意。</string>
    <string name="ys1_2">我们为改善产品、提供服务和保障产品正常运行，同时为防止机器人恶意盗刷金币的安全防范原因，所必须收集的基本信息有:您设备的硬件型号、操作系统版本号、国际移动设备识别码（IMEI）、网络设备硬件地址（MAC）、IP地址、软件版本号、网络接入方式及类型、操作日志、设备状态、信息存储。上述信息将存储于中华人民共和国境内。单独的设备信息无法识别特定自然人身份，且该等信息我们均进行了去标识化、匿名化处理。若您拒绝提供这些信息，本产品可能只能为您提供有限的服务，但不影响您使用本产品的其他功能。</string>
    <string name="ys1_3">我们可能会与第三方授权合作伙伴如数据分析服务提供商等进行合作，基于这些合作伙伴提供服务时所需收集信息的权限，在下方“三、我们可能分享、转让和披露的信息”这一章节中，对相对应可能获取的权限和收集的信息做出了明确的说明，请您仔细阅读并知晓。</string>
    <string name="ys2_1">我们仅在本隐私政策所述目的所必需期间和法律法规要求的时限内保留您的信息。我们在中华人民共和国境内运营中收集和产生的信息，存储在中国境内。除法律法规另有规定或执法机关有特殊要求，我们会在法律规定范围内的最短期限及达成本隐私政策所述目的所需的期限内保留您的个人信息，超出上述期限后，我们将删除您的个人信息或对您的个人信息进行匿名化处理。</string>
    <string name="ys2_2">我们会使用加密技术、匿名化处理等合理可行的手段保护存储的信息，使用安全保护机制防止存储信息遭到恶意攻击。并建立专门的安全部门、安全管理制度、数据安全流程保障存储的信息。</string>
    <string name="ys2_3">尽管已经采取了上述合理有效措施，并已经遵守了相关法律规定要求的标准，但请您理解，由于技术的限制以及可能存在的各种恶意手段，也不可能始终保证信息百分之百的安全，我们将尽力确保您提供给我们的个人信息的安全性。本软件非常重视保护您信息安全。我们不会收集个人识别信息，我们会采用旨在保护您的非个人识别信息在未经授权的情况下访问和使用的行政、物理、技术手段。请注意，我们保证提供信息安全防护措施，但是无法绝对保证您的非个人识别信息可以避免在未授权的情况下被访问和使用。</string>
    <string name="ys2_4">请您注意：您一旦离开本软件后，浏览或使用其他网站、服务及内容资源，我们将没有能力和直接义务保护您在本软件及相关服务之外的软件、网站提交的任何个人信息，无论您登录、浏览或使用上述软件、网站是否基于“本软件”的链接或引导。</string>
    <string name="ys3_1_1">我们不会与任何公司、组织和个人共享您的个人信息，但以下情况除外：</string>
    <string name="ys3_1_2">1.在获取您明确同意的情况下，我们会与其他方共享您的个人信息。</string>
    <string name="ys3_1_3">2.我们可能会根据法律法规规定、诉讼争议解决需要，或按行政、司法机关依法提出的要求，对外共享您的个人信息。</string>
    <string name="ys_3_1_4">3.在法律法规允许的范围内，为维护我们的关联方或合作伙伴、您或其他用户或社会公众利益、财产或安全免遭损害而有必要共享您的个人信息。</string>
    <string name="ys3_1_5">4.与关联公司间共享：在我们的关联方向您或向我们提供服务的情况下，我们可能与我们的关联公司共享您的个人信息。但我们仅共享必要的个人信息，且关联方对您信息的处理受本隐私政策的约束。关联公司如要改变您个人信息的处理目的，将再次征求您的授权和同意。</string>
    <string name="ys3_1_6">5.与外部合作伙伴间共享：我们仅会出于合法的、正当的、必要的、特定的、明确的以及为实现本隐私政策中声明的目的,可能会与我们的供应商、服务提供商、顾问、代理人、第三方广告商、应用程序开发者、开放平台或其他合作伙伴共享必要的个人信息；或是汇总后、已进行匿名化处理或者其他不会识别到您个人身份的信息，以为您提供更好的客户服务和用户体验。这些供应商、服务提供商、顾问、代理人可能为我们提供技术基础设施服务，分析我们服务的使用方式，衡量广告和服务的有效性，提供客户服务和支付服务，进行学术研究和调查，或提供法律、财务与技术顾问服务。我们所有的合作伙伴无权将共享的个人信息用于与产品或服务无关的其他用途。</string>
    <string name="ys3_2_1">我们不会将您的个人信息转让给其他任何公司、组织和个人，但以下情形除外：</string>
    <string name="ys3_2_2">1.随着公司业务的发展，我们及我们的关联公司有可能进行合并、收购、资产转让或其他类似的交易。如相关交易涉及到您的个人信息转让，我们会要求新持有您个人信息的公司、组织和个人继续受此政策约束，否则我们将要求该公司、组织和个人重新征得您的授权同意。</string>
    <string name="ys3_2_3">2.在获得您明确同意的情形下转让，亦即获得您明确同意后，我们会向其他方转让我们已经获取的您的个人信息</string>
    <string name="ys3_3_1">我们仅会在以下情况下，公开披露您的个人信息：</string>
    <string name="ys3_3_2">1.已经获得您明确同意。</string>
    <string name="ys3_3_3">2. 在法律、法律程序、诉讼或政府主管部门强制性要求的情况下，我们可能会公开披露您的个人信息。</string>
    <string name="ys3_3_4">3. 在法律法规允许的范围内，为维护公司的关联方或合作伙伴、您或其他用户或社会公众利益、财产或安全免遭损害而有必要披露您的个人信息。</string>
    <string name="ys3_3_5">4. 法律法规规定的其他情形。</string>
    <string name="ys3_3_6">根据法律规定，共享、转让经去标识化处理的个人信息，且确保数据接收方无法复原并重新识别个人信息主体的，不属于个人信息的对外共享、转让及公开披露行为，对此类数据的保存及处理将无需另行向您通知并征得您的同意。</string>
    <string name="ys4_1">为了更好地为您提供服务，在您使用本软件时，表示您已经同意授权包含但不限于以下权限。计算器会向您说明以下权限的主要作用：</string>
    <string name="ys4_2">1. permission android:name=\"android.permission.INTERNET 用于请求网络</string>
    <string name="ys4_3">2. android.permission.ACCESS_NETWORK_STATE android.permission.ACCESS_WIFI_STATE android.permission.READ_PHONE_STATE 用户友盟统计第三方平台</string>
    <string name="ys5_1">SDK技术由我们合作的第三方机构提供,我们仅能知悉其要求获取授权的权。 第三方机构将会需要收取您的信息,我们无法获取您的信息，除非第三方机构明确向我们披露的要收集的敏感信息。 第三方机构要求获得的权限以及明确向我们披露的收集的敏感信息如下:</string>
    <string name="ys5_2">信息获取:MAC地址、唯一设备识别码(IMEI/android ID/IDFA/OPENUDID/GUID、SIM卡IMSI信息)、地理位置信息</string>
    <string name="ys5_3">信息获取:设备信息、操作系统、设备唯一标识、OAID、电池、信号强度、位置信息等广告的展示、点击等数据</string>
    <string name="ys6_1">随着业务的发展，我们的隐私政策可能发生变更。对于本隐私政策的重大变更，我们会采用多种方式向您提供显著的更新提示。例如，在软件改版或升级时，以弹窗形式对您进行及时告知，您继续使用我们的服务即意味着您认可我们更新后的隐私政策。</string>
    <string name="ys7_1">如果您对本隐私政策有任何疑问、意见或者投诉。请随时通过以下邮件联系我们：</string>
    <string name="ys7_2">一般情况下，我们将尽可能在15天内对您的邮件作出回复。</string>
    <string name="ys8_1">我们要求您不要向我们发送任何敏感的个人信息（例如民族、政治观点、宗教信仰、健康、性取向、犯罪背景等）。</string>
</resources>